Bug 157254 - libreoffice portable doesn't open with a long folder path
Summary: libreoffice portable doesn't open with a long folder path
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 beta1+
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
: 157534 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-15 08:38 UTC by dapgo
Modified: 2023-10-04 17:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dapgo 2023-09-15 08:38:26 UTC
Description:
I install/unzip the 7.7.0 portable version to a path like
"C:\Users\dpgouser\00_FOLDER\00_Portables_Apps\libreoffice 7.6\LibreOfficePortable"

and i after executing
LibreOfficePortable.exe
or apps.exe
I see the LO banner and a message "Synchronizing repository for shared extensions"
But after the banner the app never opens

However, after  unzipping or moving to shorter path, i can't se the message under the banner and the app opens properly
C:\Users\dpgouser\00_FOLDER\00_Portables_Apps\libreoffice 7.6\




Steps to Reproduce:
1.go https://www.libreoffice.org/download/portable-versions/
2.download https://download.documentfoundation.org/libreoffice/portable/7.6.0/LibreOfficePortable_7.6.0_Rev_2_MultilingualStandard.paf.exe
3. Install to a long pat, such as  "C:\Users\yourusername\00_your_FOLDER\00_Portables_Apps\libreoffice 7.6\LibreOfficePortable"
4. double click on a .exe file

Actual Results:
you can read "Synchronizing repository for shared extensions" and the .exe app doesn't open

Expected Results:
.exe app opens


Reproducible: Always


User Profile Reset: No

Additional Info:
.exe app open
or 
give more feedback like an error
Comment 1 Mike Kaganski 2023-09-15 12:02:29 UTC
Not specific to portable version.
Comment 2 Commit Notification 2023-09-15 14:58:26 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c36fd4286c93da4b7b56da95b9693a97e0be71fc

tdf#157254: CLucene: fix pure virtual call in destructor

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Mike Kaganski 2023-09-15 15:00:13 UTC
I hope that the crash I fixed (and that was causing the program to not start from a long path locally) was the same that caused the problem for you. Please test when you can... Closing fixed tentatively.
Comment 4 Commit Notification 2023-09-15 18:02:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e6f5ac45e46fa9b17a656d28734666653373d7d

Related: tdf#157254 Shorten paths by removing relative parts

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-19 08:40:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9828c30346c439ad8ccbab29a67d4ff2bb2bca7b

Related: tdf#157254 Shorten paths by removing relative parts

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-09-19 09:46:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/065e9a8deea358615b0af25b61e92237eb09693f

tdf#157254: CLucene: fix pure virtual call in destructor

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2023-10-04 17:23:47 UTC
*** Bug 157534 has been marked as a duplicate of this bug. ***